Added enpoint for report of user recepits
